# ogip

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py  tools.ipynb
.github/workflows/: test.yaml
ogip/: cli.py  core.py  lc.py  spec.py  tools.py
tests/: conftest.py  test_convolutions.py  test_lc.py  test_spectra.py
tests/data/: FPMA_3.0_7.0.flc  FPMA_7.0_30.0_sr.lc  IBIS_lc_Swift_J151857.0-572147_30-50.fits  JMX1_lc_Swift_J151857.0-572147_3-10.fits  MOS1source_spectrum_150_rbn.pi  rmf_rt16_116.fits
