[bumpversion]
current_version = 0.1.2
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values = 
	dev
	prod

[bumpversion:part:build]

[bumpversion:file:VERSION]

[bumpversion:file:setup.py]

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = ogip
license = GPL-2+
license_file = COPYING
author = V.S.
author_email = vladimir.savchenko@gmail.com
url = https://odahub.io/
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: POSIX
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet
	Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires = 
	numpy>=1.16.0
	astropy
	scipy
	click

[options.extras_require]
testing = 
	pytest>=4.6
	mypy
	pylint

[options.entry_points]
console_scripts = 
	ogip = ogip.cli:cli
